--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@apollo/react-hoc": "^4.0.0",
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-boost": "^0.4.9",
     "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
     "nanoid": "^3.3.2",
     "react": "^18.0.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
